<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
        name = "myName"
        type = "com.example.aboutme.MyName"/>
    </data>

    <LinearLayout
        style="@style/Theme.AboutMe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_text"
            style="@style/name_style"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textSize="40sp"
            tools:text="Name" />

        <EditText
            android:id="@+id/nickname_edit"
            style="@style/name_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/what_is_your_nickname"
            android:inputType="text"
            android:textAlignment="textStart"/>

        <Button
            android:id="@+id/done_button"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="#8BC34A"
            android:text="@string/done"/>

        <TextView
            android:id="@+id/nickname_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/name_style"
            android:textSize="25sp"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/pikachu_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/yellow_star"
            android:src="@drawable/pikachu" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                style="@style/name_style"
                android:layout_marginBottom="20dp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/myself"
                android:textAlignment="textStart"
                android:textSize="25sp" />
        </ScrollView>
    </LinearLayout>
</layout>